--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">  
-    <title>Language Translator | CodingNepal</title>
+    <title>Language Translator</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome CDN Link for Icons -->
@@ -37,8 +36,8 @@
       <button>Translate Text</button>
     </div>
 
-    <script src="js/countries.js"></script>
-    <script src="js/script.js"></script>
+    <script src="countries.js"></script>
+    <script src="script.js"></script>
 
   </body>
 </html>
