--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <button>Translate Text</button>
     </div>
 
-    <script src="countries.js"></script>
-    <script src="script.js"></script>
+    <script src="js/countries.js"></script>
+    <script src="js/script.js"></script>
 
   </body>
 </html>
